[package]
name = "sflk-lsp"
version = "0.1.0"
authors = ["anima-libera <anim.libera@gmail.com>", "arthur correnson <arthur.correnson@ens-rennes.fr>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/anima-libera/sflk"
description = "SFLK programming language"

[dependencies]
tower-lsp = "0.13.3"
tokio = { version = "0.2", features=["full"] }