[package]
name = "sflk-lsp"
version = "0.1.0"
authors = ["arthur correnson <arthur.correnson@ens-rennes.fr>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sflk-lang/sflk"
description = "SFLK language server"

[dependencies]
tower-lsp = "0.13.3"
tokio = { version = "0.2", features=["full"] }